@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-12T02:04:02Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 2,
+  "timestamp" : "2022-05-12T08:30:17Z",
+  "count" : 4,
+  "count_minmax" : [ 0, 4 ],
+  "count_prev_day_inc" : 6,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 1,
+  "uniques" : 3,
+  "uniques_minmax" : [ 0, 3 ],
+  "uniques_prev_day_inc" : 4,
   "uniques_prev_day_dec" : 0
 }
