@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-12T02:04:02Z",
+  "timestamp" : "2022-05-12T08:30:17Z",
   "count_outdated" : 118,
   "uniques_outdated" : 39,
-  "count" : 144,
-  "uniques" : 58,
+  "count" : 148,
+  "uniques" : 61,
   "clones" : [
     {
       "timestamp": "2022-04-29T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 0, 3 ]
     }
   ]
 }
