@@ -1,6 +1,6 @@
 {
-  "count": 26,
-  "uniques": 8,
+  "count": 30,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-04-29T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
