@@ -1,3 +1,9 @@
+2022-05-12T08:30:17Z:
+* notice: last 14d: all unq: 30 9
+* notice: prev accum: outdated-all outdated-unq / all unq: 118 39 / 144 58
+* notice: next accum: outdated-all outdated-unq / all unq: 118 39 / 148 61
+* notice: prev json diff / prev day diff: unq all: +3 +4 -0 -0 / +4 +6 -0 -0
+
 2022-05-12T02:04:02Z:
 * notice: last 14d: all unq: 26 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 118 39 / 142 57
